Added tests, changed number of iterations to 1000000